--- a/404.md
+++ b/404.md
@@ -1,5 +1,6 @@
 ---
 permalink: /404.html
+title: Page Not Found
 ---
 
-# Page Not Found - 404
+[HTTP 404 - Wikipedia](https://en.wikipedia.org/wiki/HTTP_404)
